--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-8.16MB/s(Youtube:不良林), server: 116.129.254.65, port: 63004, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.129.254.65}}
-  - {name: 🇩🇪 德国-1.55MB/s(Youtube:不良林), server: mosaic.marythunt.xyz, port: 443, type: trojan, password: !<str> 372815193, sni: mosaic.marythunt.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.43MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-398.4KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇯🇵 日本-5.19MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
   - {name: 🇨🇳 中国-9.58MB/s(Youtube:不良林), server: 36.139.154.162, port: 45149, type: vmess, uuid: 25066212-3c68-4f60-9845-80632aa27a20, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 36.139.154.162}}
-  - {name: 🇺🇸 美国-5.35MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-1.55MB/s(Youtube:不良林), server: mosaic.marythunt.xyz, port: 443, type: trojan, password: !<str> 372815193, sni: mosaic.marythunt.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.68MB/s(Youtube:不良林), server: 36.134.116.212, port: 45392, type: ss, cipher: chacha20-ietf-poly1305, password: 1cb6f041-a1b4-4d6b-b72c-bcb879e1017d}
+  - {name: 🇦🇺 澳大利亚-2.12MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
   - {name: 🇮🇳 印度-2.72MB/s(Youtube:不良林), server: jgwhdlb1.gaox.ml, port: 443, type: trojan, password: e05c749b-7c6b-41b8-9c71-9dcf685edf4a, sni: jgwhdlb1.gaox.ml, skip-cert-verify: true}
   - {name: 🇺🇸 美国-5.57MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
   - {name: 🇬🇧 英国-698.9KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-3.08MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-8.04MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 43960, type: vmess, uuid: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /j20-sp1, ws-headers: {Host: pp1.zhengzhongfeizhu.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.16MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-398.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.19MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.68MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.12MB/s(Youtube:不良林)
       - 🇮🇳 印度-2.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.57MB/s(Youtube:不良林)
       - 🇬🇧 英国-698.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.04MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-8.16MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-398.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.19MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.68MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.12MB/s(Youtube:不良林)
       - 🇮🇳 印度-2.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.57MB/s(Youtube:不良林)
       - 🇬🇧 英国-698.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.04MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.16MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-398.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.19MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.68MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.12MB/s(Youtube:不良林)
       - 🇮🇳 印度-2.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.57MB/s(Youtube:不良林)
       - 🇬🇧 英国-698.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.04MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-8.16MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-398.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.19MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.68MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.12MB/s(Youtube:不良林)
       - 🇮🇳 印度-2.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.57MB/s(Youtube:不良林)
       - 🇬🇧 英国-698.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.04MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.16MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-398.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.19MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.68MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.12MB/s(Youtube:不良林)
       - 🇮🇳 印度-2.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.57MB/s(Youtube:不良林)
       - 🇬🇧 英国-698.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.04MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-8.16MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-398.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.19MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.68MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.12MB/s(Youtube:不良林)
       - 🇮🇳 印度-2.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.57MB/s(Youtube:不良林)
       - 🇬🇧 英国-698.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.04MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-8.16MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-398.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.19MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.68MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.12MB/s(Youtube:不良林)
       - 🇮🇳 印度-2.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.57MB/s(Youtube:不良林)
       - 🇬🇧 英国-698.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.04MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
