--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-5.19MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-9.58MB/s(Youtube:不良林), server: 36.139.154.162, port: 45149, type: vmess, uuid: 25066212-3c68-4f60-9845-80632aa27a20, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 36.139.154.162}}
-  - {name: 🇩🇪 德国-1.55MB/s(Youtube:不良林), server: mosaic.marythunt.xyz, port: 443, type: trojan, password: !<str> 372815193, sni: mosaic.marythunt.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.68MB/s(Youtube:不良林), server: 36.134.116.212, port: 45392, type: ss, cipher: chacha20-ietf-poly1305, password: 1cb6f041-a1b4-4d6b-b72c-bcb879e1017d}
-  - {name: 🇦🇺 澳大利亚-2.12MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
-  - {name: 🇮🇳 印度-2.72MB/s(Youtube:不良林), server: jgwhdlb1.gaox.ml, port: 443, type: trojan, password: e05c749b-7c6b-41b8-9c71-9dcf685edf4a, sni: jgwhdlb1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.57MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-698.9KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-3.08MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇨🇳 中国-8.04MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 43960, type: vmess, uuid: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /j20-sp1, ws-headers: {Host: pp1.zhengzhongfeizhu.xyz}}
+  - {name: 🇨🇳 台湾-10.23MB/s(Youtube:不良林), server: ntw02.vsvideo.live, port: 25634, type: trojan, password: a2a37460-2a05-3211-b0d6-d0b37971f84e, sni: ntw02.vsvideo.live, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.57MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30120, type: trojan, password: 213d1480-23fd-44aa-9d91-b1e3502a59c5, sni: gzyd2.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-3.28MB/s(Youtube:不良林), server: usyy.884899.cf, port: 443, type: trojan, password: 2debb06b-95ce-4e9b-956a-6cf7cadac30c, sni: usyy.884899.cf, skip-cert-verify: true}
+  - {name: 🇮🇳 印度-2.72MB/s(Youtube:不良林), server: jgwhdlb1.gaox.ml, port: 443, type: trojan, password: e05c749b-7c6b-41b8-9c71-9dcf685edf4a, sni: jgwhdlb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-3.71MB/s(Youtube:不良林), server: trojan2.udpgw.com, port: 443, type: trojan, password: 973ef350-f6a5-11ec-9274-1239d0255272, sni: trojan2.udpgw.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.63MB/s(Youtube:不良林), server: 150.230.43.106, port: 54829, type: vmess, uuid: f2b5c3ff-86c7-4efa-831f-ff0fcd7656a5, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-5.11MB/s(Youtube:不良林), server: 152.69.206.209, port: 1212, type: vmess, uuid: fb908160-9697-4bfd-f5b7-f1fbc53e60fa, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 152.69.206.209}}
+  - {name: 🇺🇸 美国-5.71MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-4.67MB/s(Youtube:不良林), server: jgwdj3.gaox.ml, port: 443, type: trojan, password: da777aae-defb-41d0-a183-2c27da2b4677, sni: jgwdj3.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-5.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.58MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.68MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.12MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.57MB/s(Youtube:不良林)
-      - 🇬🇧 英国-698.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.04MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-10.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.57MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.28MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.72MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.63MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.67MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-5.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.58MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.68MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.12MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.57MB/s(Youtube:不良林)
-      - 🇬🇧 英国-698.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.04MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-10.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.57MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.28MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.72MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.63MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.67MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-5.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.58MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.68MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.12MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.57MB/s(Youtube:不良林)
-      - 🇬🇧 英国-698.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.04MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-10.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.57MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.28MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.72MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.63MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.67MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-10.23MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-5.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.58MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.68MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.12MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.57MB/s(Youtube:不良林)
-      - 🇬🇧 英国-698.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.04MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-10.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.57MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.28MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.72MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.63MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.67MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-5.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.58MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.68MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.12MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.57MB/s(Youtube:不良林)
-      - 🇬🇧 英国-698.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.04MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-10.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.57MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.28MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.72MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.63MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.67MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-5.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.58MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.68MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.12MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.57MB/s(Youtube:不良林)
-      - 🇬🇧 英国-698.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.04MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-10.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.57MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.28MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.72MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.63MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.67MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-5.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.58MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.68MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.12MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.57MB/s(Youtube:不良林)
-      - 🇬🇧 英国-698.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.04MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-10.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.57MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.28MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.72MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.63MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.67MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
