--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-8.04MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 43960, type: vmess, uuid: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /j20-sp1, ws-headers: {Host: pp1.zhengzhongfeizhu.xyz}}
-  - {name: 🇨🇳 台湾-10.23MB/s(Youtube:不良林), server: ntw02.vsvideo.live, port: 25634, type: trojan, password: a2a37460-2a05-3211-b0d6-d0b37971f84e, sni: ntw02.vsvideo.live, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-7.57MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30120, type: trojan, password: 213d1480-23fd-44aa-9d91-b1e3502a59c5, sni: gzyd2.52147.top, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-2.17MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇦🇺 澳大利亚-2.52MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
+  - {name: 🇨🇳 中国-2.24MB/s(Youtube:不良林), server: 103.152.226.209, port: 57891, type: vmess, uuid: 564d7a27-b67f-49c9-d220-2be468dabfd6, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-3.28MB/s(Youtube:不良林), server: usyy.884899.cf, port: 443, type: trojan, password: 2debb06b-95ce-4e9b-956a-6cf7cadac30c, sni: usyy.884899.cf, skip-cert-verify: true}
-  - {name: 🇮🇳 印度-2.72MB/s(Youtube:不良林), server: jgwhdlb1.gaox.ml, port: 443, type: trojan, password: e05c749b-7c6b-41b8-9c71-9dcf685edf4a, sni: jgwhdlb1.gaox.ml, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-3.71MB/s(Youtube:不良林), server: trojan2.udpgw.com, port: 443, type: trojan, password: 973ef350-f6a5-11ec-9274-1239d0255272, sni: trojan2.udpgw.com, skip-cert-verify: true}
   - {name: 🇺🇸 美国-4.63MB/s(Youtube:不良林), server: 150.230.43.106, port: 54829, type: vmess, uuid: f2b5c3ff-86c7-4efa-831f-ff0fcd7656a5, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇯🇵 日本-5.11MB/s(Youtube:不良林), server: 152.69.206.209, port: 1212, type: vmess, uuid: fb908160-9697-4bfd-f5b7-f1fbc53e60fa, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 152.69.206.209}}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.04MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-10.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.57MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.17MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.24MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.28MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.72MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.71MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.63MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.11MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-8.04MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-10.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.57MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.17MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.24MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.28MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.72MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.71MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.63MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.11MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.04MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-10.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.57MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.17MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.24MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.28MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.72MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.71MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.63MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.11MB/s(Youtube:不良林)
@@ -66,18 +66,17 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-10.23MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-8.04MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-10.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.57MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.17MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.24MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.28MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.72MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.71MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.63MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.11MB/s(Youtube:不良林)
@@ -88,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.04MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-10.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.57MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.17MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.24MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.28MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.72MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.71MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.63MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.11MB/s(Youtube:不良林)
@@ -104,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-8.04MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-10.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.57MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.17MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.24MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.28MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.72MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.71MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.63MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.11MB/s(Youtube:不良林)
@@ -129,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-8.04MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-10.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.57MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.17MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.24MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.28MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.72MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.71MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.63MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.11MB/s(Youtube:不良林)
