--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-2.17MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇦🇺 澳大利亚-2.52MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
-  - {name: 🇨🇳 中国-2.24MB/s(Youtube:不良林), server: 103.152.226.209, port: 57891, type: vmess, uuid: 564d7a27-b67f-49c9-d220-2be468dabfd6, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-3.28MB/s(Youtube:不良林), server: usyy.884899.cf, port: 443, type: trojan, password: 2debb06b-95ce-4e9b-956a-6cf7cadac30c, sni: usyy.884899.cf, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-3.71MB/s(Youtube:不良林), server: trojan2.udpgw.com, port: 443, type: trojan, password: 973ef350-f6a5-11ec-9274-1239d0255272, sni: trojan2.udpgw.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.63MB/s(Youtube:不良林), server: 150.230.43.106, port: 54829, type: vmess, uuid: f2b5c3ff-86c7-4efa-831f-ff0fcd7656a5, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-5.11MB/s(Youtube:不良林), server: 152.69.206.209, port: 1212, type: vmess, uuid: fb908160-9697-4bfd-f5b7-f1fbc53e60fa, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 152.69.206.209}}
+  - {name: 🇫🇷 法国-1.34MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇺🇸 美国-3.08MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-5.71MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-4.67MB/s(Youtube:不良林), server: jgwdj3.gaox.ml, port: 443, type: trojan, password: da777aae-defb-41d0-a183-2c27da2b4677, sni: jgwdj3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.02MB/s(Youtube:不良林), server: 36.134.116.212, port: 45392, type: ss, cipher: chacha20-ietf-poly1305, password: 16a6617b-2c13-4473-9f8f-9606c9d9a0d4}
+  - {name: 🇨🇭 瑞士-435.0KB/s(Youtube:不良林), server: ch1.nodegz.top, port: 1400, type: trojan, password: b6f47fcf-6195-38d4-8f49-9e5ccd6bd8f1, sni: ch1.nodegz.top, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-3.01MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.86MB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: 2df8cb33-de40-438c-840a-5f1d05fe7518, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
+  - {name: 🇰🇷 韩国-3.33MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-3.68MB/s(Youtube:不良林), server: usyy.884899.cf, port: 443, type: trojan, password: 2debb06b-95ce-4e9b-956a-6cf7cadac30c, sni: usyy.884899.cf, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.83MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-2.17MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.24MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.28MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.63MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.11MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.02MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-435.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.33MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.83MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-2.17MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.24MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.28MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.63MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.11MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.02MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-435.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.33MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.83MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-2.17MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.24MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.28MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.63MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.11MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.02MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-435.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.33MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.83MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-2.17MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.24MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.28MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.63MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.11MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.02MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-435.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.33MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.83MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-2.17MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.24MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.28MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.63MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.11MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.02MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-435.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.33MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.83MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-2.17MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.24MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.28MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.63MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.11MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.02MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-435.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.33MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.83MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-2.17MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.24MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.28MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.63MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.11MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.02MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-435.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.33MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.83MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
